# Autoregressive-KANs

./: CMakeLists.txt  README.md  bindings.cpp  kan.cpp  kan.hpp  trainer.cpp  trainer.hpp
bindings/: pykan.cpp
sr/: kan.hpp
src/: example.cpp  forecast.cpp  kan.cpp  kan.hpp  spline.cpp  spline.hpp
